PWA 앱 설치 가능 형식으로 변환 및 리팩토링
다운 가능, 초기에 긴 로딩 시간 줄임

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="theme-color" content="#3b82f6" />
+
+      <!-- iOS PWA hints (installation via '홈 화면에 추가') -->
+      <meta name="apple-mobile-web-app-capable" content="yes" />
+      <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+      <meta name="apple-mobile-web-app-title" content="Bible Plan" />
+      <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
       <title>Bible Reading Plan App</title>
     </head>
 
