--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
       <!-- iOS PWA hints (installation via '홈 화면에 추가') -->
       <meta name="apple-mobile-web-app-capable" content="yes" />
+      <meta name="mobile-web-app-capable" content="yes" />
       <meta name="apple-mobile-web-app-status-bar-style" content="default" />
       <meta name="apple-mobile-web-app-title" content="Bible Plan" />
       <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
