--- a/index.html
+++ b/index.html
@@ -17,6 +17,44 @@
 
     <body>
       <div id="root"></div>
+      <script>
+        (function () {
+          function escapeHtml(s) {
+            return String(s)
+              .replace(/&/g, "&amp;")
+              .replace(/</g, "&lt;")
+              .replace(/>/g, "&gt;")
+              .replace(/\"/g, "&quot;")
+              .replace(/'/g, "&#39;");
+          }
+
+          function renderError(title, detail) {
+            var root = document.getElementById("root");
+            if (!root) return;
+            var msg = detail ? String(detail) : "";
+            root.innerHTML =
+              '<div style="padding:16px; font-family:system-ui, -apple-system, Segoe UI, Roboto, sans-serif;">' +
+              '<h2 style="margin:0 0 8px 0; font-size:16px;">' +
+              escapeHtml(title) +
+              "</h2>" +
+              '<pre style="margin:0; white-space:pre-wrap; word-break:break-word;">' +
+              escapeHtml(msg) +
+              "</pre>" +
+              "</div>";
+          }
+
+          window.addEventListener("error", function (e) {
+            // Script load errors: e.message may be empty.
+            var detail = (e && (e.error && (e.error.stack || e.error.message))) || (e && e.message) || String(e);
+            renderError("앱 로딩 중 오류가 발생했습니다", detail);
+          });
+
+          window.addEventListener("unhandledrejection", function (e) {
+            var reason = (e && e.reason && (e.reason.stack || e.reason.message)) || (e && e.reason) || String(e);
+            renderError("앱 로딩 중 오류가 발생했습니다", reason);
+          });
+        })();
+      </script>
       <script type="module" src="/src/main.tsx"></script>
     </body>
   </html>
